2008-08-13  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Eric Seidel

        Fix @font-face inside @media rule crash.
        https://bugs.webkit.org/show_bug.cgi?id=20367

        Test: fast/css/font-face-in-media-rule.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSRuleSet::addRulesFromSheet):


Canonical link: https://commits.webkit.org/28168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35760 268f45cc-cd09-0410-ab3c-d52691b4dbfc